@@ -2,14 +2,13 @@ package com.studleague.studleague.factory;
 
 import com.studleague.studleague.dto.TeamCompositionDTO;
 import com.studleague.studleague.entities.TeamComposition;
-import com.studleague.studleague.repository.PlayerRepository;
-import com.studleague.studleague.repository.TeamRepository;
-import com.studleague.studleague.repository.TournamentRepository;
 import com.studleague.studleague.services.EntityRetrievalUtils;
 import lombok.NoArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
+
+import java.util.stream.Collectors;
 
 @Component
 @NoArgsConstructor
@@ -19,23 +18,25 @@ public class TeamCompositionFactory implements DTOFactory<TeamCompositionDTO, Te
     @Autowired
     private EntityRetrievalUtils entityRetrievalUtils;
 
+
+    @Autowired
+    private TournamentMainInfoFactory tournamentMainInfoFactory;
+
     @Autowired
     @Lazy
-    private TeamFactory teamFactory;
+    private TeamMainInfoFactory teamMainInfoFactory;
 
     @Autowired
-    private TournamentFactory tournamentFactory;
-
-    @Autowired
-    private PlayerFactory playerFactory;
+    @Lazy
+    private PlayerMainInfoFactory playerMainInfoFactory;
 
 
     public TeamCompositionDTO mapToDto(TeamComposition teamComposition) {
         return TeamCompositionDTO.builder()
                 .id(teamComposition.getId())
-                .parentTeam(teamFactory.mapToDto(teamComposition.getParentTeam()))
-                .tournament(tournamentFactory.mapToDto(teamComposition.getTournament()))
-                .players(teamComposition.getPlayers().stream().map(x->playerFactory.mapToDtoWithoutTeams(x)).toList())
+                .parentTeam(teamMainInfoFactory.mapToDto(teamComposition.getParentTeam()))
+                .tournament(tournamentMainInfoFactory.mapToDto(teamComposition.getTournament()))
+                .players(teamComposition.getPlayers().stream().map(x -> playerMainInfoFactory.mapToDto(x)).collect(Collectors.toList()))
                 .build();
     }
 
@@ -43,9 +44,9 @@ public class TeamCompositionFactory implements DTOFactory<TeamCompositionDTO, Te
     {
         return TeamComposition.builder()
                 .id(teamCompositionDTO.getId())
-                .parentTeam(teamFactory.mapToEntity(teamCompositionDTO.getParentTeam()))
-                .players(teamCompositionDTO.getPlayers().stream().map(x->playerFactory.mapToEntityWithoutTeams(x)).toList())
-                .tournament(tournamentFactory.mapToEntity(teamCompositionDTO.getTournament()))
+                .parentTeam(teamMainInfoFactory.mapToEntity(teamCompositionDTO.getParentTeam()))
+                .players(teamCompositionDTO.getPlayers().stream().map(x -> playerMainInfoFactory.mapToEntity(x)).toList())
+                .tournament(tournamentMainInfoFactory.mapToEntity(teamCompositionDTO.getTournament()))
                 .build();
     }
 
