@@ -4,21 +4,13 @@ import com.studleague.studleague.dto.TeamDTO;
 import com.studleague.studleague.entities.Team;
 import com.studleague.studleague.services.EntityRetrievalUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
 
 
 @Component
 public class TeamFactory implements DTOFactory<TeamDTO, Team>{
-
-
-    @Autowired
-    @Lazy
-    private PlayerFactory playerFactory;
-
-    @Autowired
-    private TournamentFactory tournamentFactory;
 
     @Autowired
     private EntityRetrievalUtils entityRetrievalUtils;
@@ -28,6 +20,15 @@ public class TeamFactory implements DTOFactory<TeamDTO, Team>{
 
     @Autowired
     private FlagFactory flagFactory;
+
+    @Autowired
+    private PlayerMainInfoFactory playerMainInfoFactory;
+
+    @Autowired
+    private TournamentMainInfoFactory tournamentMainInfoFactory;
+
+    @Autowired
+    private LeagueMainInfoFactory leagueMainInfoFactory;
 
     public TeamFactory() {
     }
@@ -39,10 +40,10 @@ public class TeamFactory implements DTOFactory<TeamDTO, Team>{
                 .teamName(teamDTO.getTeamName())
                 .university(teamDTO.getUniversity())
                 .idSite(teamDTO.getIdSite())
-                .players(teamDTO.getPlayers().stream().map(x->playerFactory.mapToEntityWithoutTeams(x)).toList())
-                .tournaments(teamDTO.getTournaments().stream().map(x->tournamentFactory.mapToEntity(x)).toList())
-                .league(leagueFactory.mapToEntity(teamDTO.getLeague()))
-                .flags(teamDTO.getFlags().stream().map(x -> flagFactory.mapToEntity(x)).toList())
+                .players(teamDTO.getPlayers().stream().map(x -> playerMainInfoFactory.mapToEntity(x)).collect(Collectors.toList()))
+                .tournaments(teamDTO.getTournaments().stream().map(x -> tournamentMainInfoFactory.mapToEntity(x)).collect(Collectors.toList()))
+                .league(leagueMainInfoFactory.mapToEntity(teamDTO.getLeague()))
+                .flags(teamDTO.getFlags().stream().map(x -> flagFactory.mapToEntity(x)).collect(Collectors.toList()))
                 .build();
     }
 
@@ -51,35 +52,14 @@ public class TeamFactory implements DTOFactory<TeamDTO, Team>{
                 .id(team.getId())
                 .teamName(team.getTeamName())
                 .university(team.getUniversity())
-                .players(team.getPlayers().stream().map(x->playerFactory.mapToDtoWithoutTeams(x)).toList())
-                .tournaments(team.getTournaments().stream().map(x->tournamentFactory.mapToDto(x)).toList())
-                .league(leagueFactory.mapToDto(team.getLeague()))
+                .players(team.getPlayers().stream().map(x -> playerMainInfoFactory.mapToDto(x)).collect(Collectors.toList()))
+                .tournaments(team.getTournaments().stream().map(x -> tournamentMainInfoFactory.mapToDto(x)).collect(Collectors.toList()))
+                .league(leagueMainInfoFactory.mapToDto(team.getLeague()))
                 .idSite(team.getIdSite())
-                .flags(team.getFlags().stream().map(x -> flagFactory.mapToDto(x)).toList())
+                .flags(team.getFlags().stream().map(x -> flagFactory.mapToDto(x)).collect(Collectors.toList()))
                 .build();
     }
 
-    public Team mapToEntityWithoutTournaments(TeamDTO teamDTO) {
 
-        return Team.builder()
-                .id(teamDTO.getId())
-                .teamName(teamDTO.getTeamName())
-                .university(teamDTO.getUniversity())
-                .idSite(teamDTO.getIdSite())
-                .players(teamDTO.getPlayers().stream().map(x->playerFactory.mapToEntityWithoutTeams(x)).toList())
-                .league(leagueFactory.mapToEntity(teamDTO.getLeague()))
-                .build();
-    }
-
-    public TeamDTO mapToDtoWithoutTournaments(Team team) {
-        return TeamDTO.builder()
-                .id(team.getId())
-                .teamName(team.getTeamName())
-                .university(team.getUniversity())
-                .players(team.getPlayers().stream().map(x->playerFactory.mapToDtoWithoutTeams(x)).toList())
-                .league(leagueFactory.mapToDto(team.getLeague()))
-                .idSite(team.getIdSite())
-                .build();
-    }
 }
 
